--- a/res/layout/layout_main_plus_meetting.xml
+++ b/res/layout/layout_main_plus_meetting.xml
@@ -253,6 +253,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="10dp"
                         android:layout_toLeftOf="@id/arrow"
+                        android:gravity="right"
                         android:ems="6"
                         android:singleLine="true"
                         android:ellipsize="end"
