--- a/res/layout/secretary_list_item.xml
+++ b/res/layout/secretary_list_item.xml
@@ -10,6 +10,12 @@
         android:layout_height="wrap_content"
         android:background="@drawable/btn_list_item_bg" >
 
+        <com.meijialife.simi.ui.OffcutView
+            android:id="@+id/ov_bar"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+             />
+
         <com.meijialife.simi.ui.RoundImageView
             android:id="@+id/item_iv_icon"
             android:layout_width="65dp"
@@ -51,10 +57,9 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
                     android:text="会计"
+                    android:textColor="@color/simi_color_dark_gray"
                     android:textSize="11sp"
-                    android:textColor="@color/simi_color_dark_gray" 
-                    android:visibility="gone"
-                    />
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/item_tv_fav"
@@ -62,8 +67,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:text="工商代理人"
-                    android:textSize="11sp"
-                    android:textColor="@color/find_fav_red_color" />
+                    android:textColor="@color/find_fav_red_color"
+                    android:textSize="11sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -94,8 +99,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="北京-海淀区"
-                        android:textSize="11sp"
-                        android:textColor="@color/simi_color_dark_gray" />
+                        android:textColor="@color/simi_color_dark_gray"
+                        android:textSize="11sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -103,8 +108,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:orientation="horizontal"
-                     >
+                    android:orientation="horizontal" >
 
                     <ImageView
                         android:id="@+id/item_iv_des_icon"
@@ -119,12 +123,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="下单10分钟内相应"
-                        android:textSize="11sp"
-                        android:textColor="@color/simi_color_dark_gray" />
+                        android:textColor="@color/simi_color_dark_gray"
+                        android:textSize="11sp" />
                 </LinearLayout>
             </LinearLayout>
-           <LinearLayout
-               android:id="@+id/ll_fav"
+
+            <LinearLayout
+                android:id="@+id/ll_fav"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/ll_addr"
@@ -132,27 +137,27 @@
                 android:layout_marginBottom="5dp"
                 android:layout_toRightOf="@id/item_iv_icon"
                 android:orientation="horizontal" >
-            	
-               <RelativeLayout
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_alignBottom="@id/ll_user_tags"
-                   >
-                  <ImageView
-                     android:layout_width="15dp"
-                     android:layout_height="15dp"
-                     android:layout_gravity="center"
-                     android:layout_marginTop="2dp"
-                     android:src="@drawable/icon_sec_fav" />
-                   </RelativeLayout>
-               	  <com.meijialife.simi.ui.TagGroup
-					 android:id="@+id/ll_user_tags"
-					 style="@style/TagGroup"
-					 android:clickable="false"
-					 android:focusable="false"
-		 			 />
-               </LinearLayout>
-        
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/ll_user_tags" >
+
+                    <ImageView
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="2dp"
+                        android:src="@drawable/icon_sec_fav" />
+                </RelativeLayout>
+
+                <com.meijialife.simi.ui.TagGroup
+                    android:id="@+id/ll_user_tags"
+                    style="@style/TagGroup"
+                    android:clickable="false"
+                    android:focusable="false" />
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -166,12 +171,11 @@
                     android:id="@+id/item_tv_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="全市有四个分部，50多名专业人员，服务不满意，免部分费用"
-                    android:textSize="11sp"
-                    android:textColor="@color/simi_color_dark_gray"
-                    android:lines="2"
                     android:ellipsize="end"
-                    />
+                    android:lines="2"
+                    android:text="全市有四个分部，50多名专业人员，服务不满意，免部分费用"
+                    android:textColor="@color/simi_color_dark_gray"
+                    android:textSize="11sp" />
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
