--- a/res/layout/dynamic_details_activity.xml
+++ b/res/layout/dynamic_details_activity.xml
@@ -60,14 +60,16 @@
         android:background="@color/simi_color_white"
          >
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
             <LinearLayout
+                android:id="@+id/ll_item1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
                 android:layout_marginTop="5dp"
                 android:background="@color/simi_color_white"
                 android:orientation="vertical" >
@@ -235,8 +237,10 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_item2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_below="@id/ll_item1"
                 android:background="@color/simi_color_white"
                 android:orientation="vertical" >
 
@@ -247,24 +251,31 @@
                     android:layout_marginLeft="7dp"
                     android:layout_marginTop="10dp"
                     android:text="还没有评论，快来抢沙发啊~" />
-
-                <ListView
+                <com.meijialife.simi.ui.MyListView
                     android:id="@+id/listview"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:divider="@color/activity_bg_color"
+                    android:dividerHeight="1dp"
+                    android:fadingEdge="none"
+                    android:listSelector="@color/transparent"
+                    android:overScrollMode="never" >
+              </com.meijialife.simi.ui.MyListView>
+<!--                 <ListView
+                    android:id="@+id/listview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/activity_vertical_margin"
                     android:divider="@color/activity_bg_color"
                     android:dividerHeight="1dp"
                     android:fadingEdge="none"
                     android:overScrollMode="never" >
-                </ListView>
-            </LinearLayout>
-
-            <RelativeLayout
+                </ListView> -->
+                
+                  <RelativeLayout
                 android:id="@+id/rl_buttom"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"
+                android:layout_height="wrap_content"
                 android:background="@color/simi_color_white"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
@@ -297,7 +308,10 @@
                     android:singleLine="true"
                     android:textSize="14sp" />
             </RelativeLayout>
-        </LinearLayout>
+            </LinearLayout>
+
+          
+       </RelativeLayout>
     </ScrollView>
 
     <View
