--- a/res/layout/find_list_item.xml
+++ b/res/layout/find_list_item.xml
@@ -17,7 +17,7 @@
   	    <ImageView
   	        android:id="@+id/iv_ad_icon"
   	        android:layout_width="match_parent"
-  	        android:layout_height="150dp"
+  	        android:layout_height="180dp"
   	        android:src="@drawable/ad_cwkj"
   	        android:scaleType="fitXY"
   	        />
@@ -59,22 +59,28 @@
   	    <RelativeLayout
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
-  	        android:layout_weight="3"
+  	        android:layout_weight="4"
+  	        android:layout_gravity="center"
+  	        android:gravity="center"
   	        >
 			<TextView
 			    android:id="@+id/tv_ad_des"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:text="让您的企业'一键拥有'强大的人事团体"
+			    android:textColor="@color/simi_color_dark_gray"
+			    android:gravity="center"
 			    android:singleLine="true"
 			    android:ellipsize="end"
 			    />
   	    </RelativeLayout>
 
-        <RelativeLayout
+       <!--  <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1" >
+            android:layout_weight="1" 
+            android:visibility="gone"
+            >
             <TextView
                 android:id="@+id/tv_share"
                 android:layout_width="wrap_content"
@@ -84,7 +90,7 @@
                 android:drawablePadding="5dp"
                 android:gravity="center"
                 android:textColor="#676767" />
-        </RelativeLayout>
+        </RelativeLayout> -->
     </LinearLayout>
     </LinearLayout>
 
