--- a/res/layout/layout_account_info_activity.xml
+++ b/res/layout/layout_account_info_activity.xml
@@ -55,7 +55,7 @@
                         android:layout_marginLeft="@dimen/activity_horizontal_margin"
                         android:text="头像"
                         android:textColor="@color/simi_color_gray"
-                        android:textSize="17.6sp" />
+                        android:textSize="@dimen/account_text_size" />
 
                     <com.meijialife.simi.ui.RoundImageView
                         android:id="@+id/iv_header"
@@ -88,9 +88,9 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:text="昵称:"
+                        android:text="昵称"
                         android:textColor="@color/simi_color_gray"
-                        android:textSize="17.6sp" />
+                        android:textSize="@dimen/account_text_size" />
 
                     <EditText
                         android:id="@+id/et_name"
@@ -124,9 +124,9 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:text="手机:"
+                        android:text="手机"
                         android:textColor="@color/simi_color_gray"
-                        android:textSize="17.6sp" />
+                        android:textSize="@dimen/account_text_size" />
 
                     <EditText
                         android:id="@+id/et_mobile"
@@ -160,9 +160,9 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:text="性别:"
+                        android:text="性别"
                         android:textColor="@color/simi_color_gray"
-                        android:textSize="17.6sp" />
+                        android:textSize="@dimen/account_text_size" />
 
                     <TextView
                         android:id="@+id/et_gender"
@@ -178,6 +178,10 @@
                         android:textColor="@color/simi_color_red"
                         android:textSize="@dimen/font_size_16" />
                 </RelativeLayout>
+                  <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/activity_bg_color" />
                  <RelativeLayout
                     android:id="@+id/rl_item_5"
                     android:layout_width="match_parent"
@@ -192,7 +196,7 @@
                         android:layout_marginLeft="@dimen/activity_horizontal_margin"
                         android:text="常用地址"
                         android:textColor="@color/simi_color_gray"
-                        android:textSize="17.6sp" />
+                        android:textSize="@dimen/account_text_size" />
 
                    <ImageView
 	                   android:layout_width="13dp"
@@ -220,9 +224,9 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:text="封面相册:"
+                        android:text="封面相册"
                         android:textColor="@color/simi_color_gray"
-                        android:textSize="17.6sp" />
+                        android:textSize="@dimen/account_text_size" />
                     
                     <ImageView
 	                   android:layout_width="13dp"
