--- a/res/layout/layout_friend_top_tab.xml
+++ b/res/layout/layout_friend_top_tab.xml
@@ -25,9 +25,9 @@
                 android:id="@+id/rb_dynamic"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:button="@null"
-                android:gravity="center"
+                android:gravity="right"
                 android:text="动态"
                 android:textColor="@color/index2_radiobutton_color" />
             <RadioButton
@@ -44,9 +44,9 @@
                 android:id="@+id/rb_msg"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:button="@null"
-                android:gravity="center"
+                android:gravity="left"
                 android:text="消息"
                 android:textColor="@color/index2_radiobutton_color" />
         </RadioGroup>
@@ -55,13 +55,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:orientation="horizontal" >
+            android:orientation="horizontal" 
+            android:visibility="gone"
+            >
 
             <View
                 android:id="@+id/line_1"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_weight="1"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:background="@color/simi_color_red" />
             <View
                 android:id="@+id/line_2"
