--- a/res/layout/layout_main_plus_affair.xml
+++ b/res/layout/layout_main_plus_affair.xml
@@ -210,6 +210,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="10dp"
                         android:layout_toLeftOf="@id/arrow"
+                        android:gravity="right"
                         android:singleLine="true"
                         android:ellipsize="end"
                         android:ems="6"
