--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -7,7 +7,9 @@
 
     <include
         android:id="@+id/view_title_bar"
-        layout="@layout/layout_title_bar" />
+        layout="@layout/layout_title_bar" 
+        android:visibility="gone"
+        />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -18,11 +20,33 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical" >
-
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:orientation="horizontal"
+                android:background="@color/simi_color_white"
+                android:layout_gravity="center"
+                android:gravity="center"
+                >
+               <ImageView
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/login_logo"
+                android:scaleType="centerInside"
+                android:visibility="visible"
+                />
+            
+			</LinearLayout>
+			
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#cccccc" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:orientation="vertical" >
 
                 <LinearLayout
@@ -39,7 +63,7 @@
 
                         <EditText
                             android:id="@+id/login_user_name"
-                            android:layout_width="0dp"
+                            android:layout_width="10dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="left|center"
                             android:layout_marginLeft="10dp"
@@ -51,7 +75,7 @@
                             android:singleLine="true"
                             android:textColor="@android:color/black"
                             android:textColorHint="@color/common_input_hint_text_color"
-                            android:textSize="15sp" />
+                            android:textSize="16sp" />
 
                         <LinearLayout
                             android:layout_width="0dp"
@@ -98,7 +122,7 @@
 
                         <EditText
                             android:id="@+id/login_password"
-                            android:layout_width="0dp"
+                            android:layout_width="80dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:layout_weight="6"
@@ -109,7 +133,7 @@
                             android:singleLine="true"
                             android:textColor="@android:color/black"
                             android:textColorHint="@color/common_input_hint_text_color"
-                            android:textSize="15sp" />
+                            android:textSize="16sp" />
                         <!-- 未收到验证码按钮 -->
 
                         <LinearLayout
@@ -155,21 +179,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
                 android:padding="15dp" >
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="点击“登录”，即表示您同意" />
+                    android:layout_weight="1"
+                    android:text="点击“登录”，即表示您同意"
+                    android:textSize="13sp"
+                    android:textColor="@color/common_input_hint_text_color"
+                    android:layout_gravity="right"
+                    android:gravity="right"
+                     />
 
                 <TextView
                     android:id="@+id/tv_user_tip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:clickable="true"
                     android:onClick="showUserUseAgreement"
                     android:text="《用户使用协议》"
-                    android:textColor="#6465F9" />
+                    android:textSize="13sp"
+                    android:layout_gravity="left"
+                    android:gravity="left"
+                    android:textColor="@color/common_input_hint_text_color"
+                     />
             </LinearLayout>
             <!-- 第三方合作登录 -->
 
@@ -184,9 +221,12 @@
 
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="1dp"
+                        android:layout_height="0.1dp"
                         android:layout_gravity="center"
-                        android:background="#cccccc" />
+                        android:background="#cccccc"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginRight="30dp"
+                         />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -194,7 +234,9 @@
                         android:layout_gravity="center"
                         android:background="@color/activity_bg_color"
                         android:padding="18dp"
-                        android:text="一键登录" />
+                        android:text="一键登录"
+                        android:textColor="@color/common_input_hint_text_color"
+                         />
                 </FrameLayout>
 
                 <LinearLayout
@@ -208,35 +250,19 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:gravity="center"
+                        android:gravity="right"
                         android:orientation="horizontal" >
 
                         <ImageView
                             android:id="@+id/qq_login_btn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="@dimen/login_btn_size"
+                            android:layout_height="@dimen/login_btn_size"
                             android:adjustViewBounds="true"
                             android:clickable="true"
                             android:src="@drawable/qq_login_img_selector" />
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="horizontal" >
-
-                        <ImageView
-                            android:id="@+id/wx_login_btn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:adjustViewBounds="true"
-                            android:clickable="true"
-                            android:src="@drawable/wx_login_img_selector" />
-                    </LinearLayout>
-
-                    <LinearLayout
+                      <LinearLayout
                         android:id="@+id/login_"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -246,11 +272,27 @@
 
                         <ImageView
                             android:id="@+id/sina_login_btn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="@dimen/login_btn_size"
+                            android:layout_height="@dimen/login_btn_size"
                             android:adjustViewBounds="true"
                             android:clickable="true"
                             android:src="@drawable/sina_login_img_selector" />
+                    </LinearLayout>
+                    
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="left"
+                        android:orientation="horizontal" >
+
+                        <ImageView
+                            android:id="@+id/wx_login_btn"
+                            android:layout_width="@dimen/login_btn_size"
+                            android:layout_height="@dimen/login_btn_size"
+                            android:adjustViewBounds="true"
+                            android:clickable="true"
+                            android:src="@drawable/wx_login_img_selector" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
