--- a/res/layout/nav_radiogroup_item.xml
+++ b/res/layout/nav_radiogroup_item.xml
@@ -2,7 +2,7 @@
 <RadioButton xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="0dip"
     android:layout_height="fill_parent"
-    android:background="#F2F2F2"
+    android:background="@color/simi_color_white"
     android:button="@null"
     android:gravity="center"
     android:text=""
