--提醒+加号样式

--- a/res/layout/card_details_activity.xml
+++ b/res/layout/card_details_activity.xml
@@ -177,7 +177,7 @@
 
                     <RelativeLayout
                         android:id="@+id/rl_status"
-                        android:layout_width="wrap_content"
+                        android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
