--- a/res/layout/dynamic_details_activity.xml
+++ b/res/layout/dynamic_details_activity.xml
@@ -51,11 +51,16 @@
             android:scaleType="centerInside"
             android:visibility="gone" />
     </RelativeLayout>
-
+  <View
+      	android:id="@+id/title_view"
+        android:layout_width="match_parent"
+        android:layout_height="0.2dp"
+        android:layout_below="@id/view_title_bar"
+        android:background="@color/cut_off_rule" />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/view_title_bar"
+        android:layout_below="@id/title_view"
         android:scrollbars="vertical"
         android:background="@color/simi_color_white"
          >
@@ -85,8 +90,8 @@
 
                     <com.meijialife.simi.ui.RoundImageView
                         android:id="@+id/iv_icon"
-                        android:layout_width="@dimen/card_icon_size"
-                        android:layout_height="@dimen/card_icon_size"
+                        android:layout_width="@dimen/feed_icon_size"
+                        android:layout_height="@dimen/feed_icon_size"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="@dimen/card_icon_margin_left"
                         android:src="@drawable/ic_defult_touxiang"
