--- a/res/layout/item_friend_dynamic.xml
+++ b/res/layout/item_friend_dynamic.xml
@@ -6,10 +6,10 @@
     android:background="@android:color/white"
     android:orientation="vertical" >
 
-    <View
+    <!-- <View
         android:layout_width="match_parent"
         android:layout_height="5dp"
-        android:background="@color/activity_bg_color" />
+        android:background="@color/activity_bg_color" /> -->
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -32,8 +32,8 @@
 
         <com.meijialife.simi.ui.RoundImageView
             android:id="@+id/iv_icon"
-            android:layout_width="@dimen/card_icon_size"
-            android:layout_height="@dimen/card_icon_size"
+            android:layout_width="@dimen/feed_icon_size"
+            android:layout_height="@dimen/feed_icon_size"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/card_icon_margin_left"
             android:src="@drawable/ic_defult_touxiang"
