--- a/res/layout/item_home_cardlist.xml
+++ b/res/layout/item_home_cardlist.xml
@@ -53,7 +53,7 @@
 
         <RelativeLayout
             android:id="@+id/rl_status"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
@@ -64,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="秘书处理中"
+                android:text="处理中"
                 android:textColor="@color/simi_color_red" />
         </RelativeLayout>
     </RelativeLayout>
@@ -93,7 +93,14 @@
                 android:id="@+id/iv_image"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:background="@drawable/card_default_shiwu" />
+                android:background="@drawable/ad_loading" />
+
+            <ImageView
+                android:id="@+id/iv_weather_image"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:visibility="gone" />
+<!--              android:background="@drawable/card_default_shiwu" -->
 
             <TextView
                 android:id="@+id/iv_default_tep"
@@ -222,9 +229,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1" 
-            android:paddingLeft="10dp"
-            >
+            android:layout_weight="1"
+            android:paddingLeft="10dp" >
 
             <TextView
                 android:id="@+id/tv_weather1"
@@ -240,9 +246,9 @@
                 android:id="@+id/iv_weather1"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
+                android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/tv_weather1"
                 android:scaleType="centerInside"
-                android:layout_centerVertical="true"
                 android:src="@drawable/common_icon_like" />
 
             <TextView
@@ -261,9 +267,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1" 
-            android:paddingLeft="5dp"
-            >
+            android:layout_weight="1"
+            android:paddingLeft="5dp" >
 
             <TextView
                 android:id="@+id/tv_weather2"
@@ -279,9 +284,9 @@
                 android:id="@+id/iv_weather2"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
+                android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/tv_weather2"
                 android:scaleType="centerInside"
-            	android:layout_centerVertical="true"
                 android:src="@drawable/common_icon_like" />
 
             <TextView
@@ -299,9 +304,9 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1" 
-            android:paddingLeft="5dp"
-            >
+            android:layout_weight="1"
+            android:paddingLeft="5dp" >
+
             <TextView
                 android:id="@+id/tv_weather3"
                 android:layout_width="wrap_content"
@@ -316,9 +321,9 @@
                 android:id="@+id/iv_weather3"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
+                android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/tv_weather3"
                 android:scaleType="centerInside"
-                android:layout_centerVertical="true"
                 android:src="@drawable/common_icon_like" />
 
             <TextView
@@ -328,8 +333,8 @@
                 android:layout_centerInParent="true"
                 android:layout_toRightOf="@id/iv_weather3"
                 android:gravity="left"
-                android:text="6~-5.c"
                 android:paddingLeft="1dp"
+                android:text="6~-5.c"
                 android:textColor="#676767" />
         </RelativeLayout>
     </LinearLayout>
