--- a/res/layout/layout_friend_dynamic.xml
+++ b/res/layout/layout_friend_dynamic.xml
@@ -4,8 +4,13 @@
     android:id="@+id/layout_friend_dynamic"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+    android:orientation="vertical" 
+    android:background="@color/bg_gv"
+    >
+      <View
+        android:layout_width="match_parent"
+        android:layout_height="0.2dp"
+        android:background="@color/cut_off_rule" />
     <ListView
         android:id="@+id/lv_friend_dynamic"
         android:layout_width="match_parent"
