--- a/res/layout/layout_friend_msg.xml
+++ b/res/layout/layout_friend_msg.xml
@@ -4,5 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
+	 <View
+        android:layout_width="match_parent"
+        android:layout_height="0.2dp"
+        android:background="@color/cut_off_rule" />
 </LinearLayout>
