--- a/res/layout/card_details_activity.xml
+++ b/res/layout/card_details_activity.xml
@@ -250,21 +250,29 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/simi_color_gray" />
                 </LinearLayout>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp" >
-
-                    <LinearLayout
+   					<TextView
+                        android:id="@+id/tv_date_str"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:gravity="bottom"
-                        android:orientation="horizontal" >
-
+                        android:text="7天前"
+                        android:layout_alignParentLeft="true"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:textColor="#a4a4a4" />
+   					
+   					<LinearLayout
+   					    android:layout_width="wrap_content"
+   					    android:layout_height="wrap_content"
+   					    android:layout_alignParentRight="true"
+   					    android:gravity="center"
+   					    >
                         <TextView
                             android:id="@+id/tv_zan"
                             android:layout_width="wrap_content"
@@ -279,19 +287,13 @@
                             android:id="@+id/tv_share"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="bottom"
+                            android:gravity="center"
                             android:layout_marginLeft="25dp"
                             android:drawableLeft="@drawable/common_icon_share"
                             android:drawablePadding="5dp"
                             android:textColor="#676767" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/tv_date_str"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:textColor="#a4a4a4" />
+                 </LinearLayout>
+                 
                 </RelativeLayout>
 
                 <View
