--- a/res/layout/find_list.xml
+++ b/res/layout/find_list.xml
@@ -1,18 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
      >
 
     <include
         android:id="@+id/view_to_fra_title_bar"
         layout="@layout/find__to_fra_title_bar" />
+    
+      
+    <include
+        android:id="@+id/find_title_list"
+        layout="@layout/find_title_list" />
+    
+      
+    <include
+        android:id="@+id/find_other_list"
+        layout="@layout/find_other_list" />
+  
+    <include
+        android:id="@+id/find_all_list"
+        layout="@layout/find_all_list" />
+    
+    
+    
+    
+    
+   <!--  
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/simi_color_white"
+        >
+         
+          <HorizontalScrollView
+            android:id="@+id/horizontalScrollView"
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
+            android:fadingEdge="@null"
+            android:scrollbars="none" 
+            >
 
-    <RelativeLayout
+            <LinearLayout
+                android:id="@+id/title_lay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center_vertical"
+                 >
+
+                <LinearLayout
+                    android:id="@+id/lay"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                     >
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/img1"
+                    android:layout_width="0dp"
+                    android:layout_height="4dp"
+                    android:background="@color/simi_color_red" 
+                    android:baselineAlignBottom="true"
+                    android:layout_marginTop="40dp"
+                    android:layout_gravity="bottom"
+                   />
+            </LinearLayout>
+        </HorizontalScrollView>
+        </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/view_to_fra_title_bar"
-        android:background="@color/activity_bg_color" >
+        android:background="@color/activity_bg_color" 
+        android:orientation="vertical"
+        >
 
         <View
             android:id="@+id/top"
@@ -24,7 +89,9 @@
             android:id="@+id/rl_tab"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@color/simi_color_white" >
+            android:background="@color/simi_color_white" 
+            android:visibility="gone"
+            >
 
             <com.meijialife.simi.ui.SyncHorizontalScrollView
                 android:id="@+id/mHsv"
@@ -85,7 +152,8 @@
                 android:visibility="visible" >
             </ImageView>
         </RelativeLayout>
-
+        
+        
         <View
             android:id="@+id/button"
             android:layout_width="match_parent"
@@ -97,11 +165,9 @@
             android:id="@+id/find_list_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="42dp"
             android:layout_weight="1.0"
             android:divider="@color/cut_off_rule"
             android:dividerHeight="0.5dp" >
         </ListView>
-    </RelativeLayout>
-
-</RelativeLayout>
+   </LinearLayout> -->
+</LinearLayout>
