--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -85,9 +85,19 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/add" />
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/add" 
+                    android:layout_marginBottom="5dp"
+                    />
+                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="工作"
+                    android:textColor="@color/tab_text_color_selector" 
+                    android:textSize="@dimen/bottom_bar_text_size"
+                    android:layout_marginBottom="20dp"
+                    />
+                
             </LinearLayout>
 
             <RelativeLayout
@@ -167,8 +177,10 @@
         <ImageView
             android:id="@+id/iv_divider"
             android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:background="@drawable/bg_main_bt_divider" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_main_bt_divider"
+            android:visibility="gone"
+             />
     </RelativeLayout>
 
     <LinearLayout
