--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -56,8 +56,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">center</item>
-        <item name="android:textSize">15dp</item>
-        <item name="android:textColor">@color/text_normal</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/simi_color_gray</item>
     </style>
 
     <!-- 多张图片上传样式 -->
